Creative Project Revision

--- a/templates/temp-1.html
+++ b/templates/temp-1.html
@@ -22,7 +22,7 @@
         </div>
         <div class="dashboard">
             <p>Dashboard</p>
-            <li><a href="../dashboard/index.html"><span class="label">home</span></a></li>
+            <li><a href="../index.html"><span class="label">home</span></a></li>
             <li><a href="../about/about.html"><span class="label">about the author</span></a></li>
         </div>
         <div class="pages">
