--- a/templates/temp-3.html
+++ b/templates/temp-3.html
@@ -33,9 +33,9 @@
             <li><a href="temp-4.html"><span class="label">Warmth Feelings</span></a></li>
         </div>
         <div class="settings">
-            <li><a>links</a></li>
-            <li><a>dates</a></li>
-            <li><a>settings</a></li>
+            <li><a href="https://mail.google.com"><i class="fas fa-envelope"></i></a></li>
+            <li><a href="https://www.facebook.com/rowwnyy"><i class="fab fa-facebook"></i></a></li>
+            <li><a href="https://twitter.com/rowwwnnniiy"><i class="fab fa-twitter"></i></a></li>
         </div>
     </ul>
 </nav>
@@ -43,12 +43,11 @@
 <body>
     <div class="container-3">
         <div class="header">
-            <h1>Poetry World</h1>
+            <h1>Payback Time</h1>
+            <h3>(Triolet Poem)</h3>
         </div>
         <div class="hero">
             <div class="component-3">
-                <h2>Payback Time</h2>
-                <h3>(Triolet Poem)</h3>
                 <p>Feeling delight for this achievement</p>
                 <p>A sentiment of enjoyment I never expected</p>
                 <p>since I remembered the hardship moment</p>
