--- a/templates/temp-4.html
+++ b/templates/temp-4.html
@@ -33,9 +33,9 @@
             <li><a href="temp-4.html"><span class="label">Warmth Feelings</span></a></li>
         </div>
         <div class="settings">
-            <li><a>links</a></li>
-            <li><a>dates</a></li>
-            <li><a>settings</a></li>
+            <li><a href="https://mail.google.com"><i class="fas fa-envelope"></i></a></li>
+            <li><a href="https://www.facebook.com/rowwnyy"><i class="fab fa-facebook"></i></a></li>
+            <li><a href="https://twitter.com/rowwwnnniiy"><i class="fab fa-twitter"></i></a></li>
         </div>
     </ul>
 </nav>
@@ -43,49 +43,52 @@
 <body>
     <div class="container-4">
         <div class="header">
-            <h1>Poetry World</h1>
+            <h1>Warmth Feelings</h1>
+            <h3>(Free Verse Poem)</h3>
         </div>
         <div class="hero">
             <div class="component-4">
-                <h2>Warmth Feelings</h2>
-                <h3>(Free Verse Poem)</h3>
-                <p> Today I feel so warm</p>
-                <p> Receiving good thoughts</p>
-                <p> from my loved ones</p>
-                <p> The feeling inside of me</p>
-                <p> burst like a pulp being pinch</p>
-                <p> My amusement of this achievement</p>
-                <p> is priceless yet worth it</p>
+                <div class="class-1">
+                    <p> Today I feel so warm</p>
+                    <p> Receiving good thoughts</p>
+                    <p> from my loved ones</p>
+                    <p> The feeling inside of me</p>
+                    <p> burst like a pulp being pinch</p>
+                    <p> My amusement of this achievement</p>
+                    <p> is priceless yet worth it</p>
 
-                <p> Being called at the recognition</p>
-                <p> is a privilege, indeed!</p>
-                <p> A favor that no one can take</p>
-                <p> you have set your the best</p>
-                <p> Knowledge is power.</p>
+                    <p> Being called at the recognition</p>
+                    <p> is a privilege, indeed!</p>
+                    <p> A favor that no one can take</p>
+                    <p> you have set your the best</p>
+                    <p> Knowledge is power.</p>
 
-                <p> First, I was once hesitant on this course</p>
-                <p> shifting is one solution, I am skeptic</p>
-                <p> learning to program is my weakness</p>
-                <p> coding makes me sluggish</p>
-                <p> computer makes me drowsy</p>
-                <p> but I never give up; I overcame it all</p>
+                    <p> First, I was once hesitant on this course</p>
+                    <p> shifting is one solution, I am skeptic</p>
+                    <p> learning to program is my weakness</p>
+                    <p> coding makes me sluggish</p>
+                    <p> computer makes me drowsy</p>
+                </div>
+                <div class="class-2">
+                    <p> but I never give up; I overcame it all</p>
 
-                <p> through hardships, I was molded</p>
-                <p> through difficulties, I was founded</p>
-                <p> through battles, I was encouraged</p>
-                <p> nothing can beat this life </p>
-                <p> I'm just a mere student.</p>
-                <p> This reward is my testimony</p>
+                    <p> through hardships, I was molded</p>
+                    <p> through difficulties, I was founded</p>
+                    <p> through battles, I was encouraged</p>
+                    <p> nothing can beat this life </p>
+                    <p> I'm just a mere student.</p>
+                    <p> This reward is my testimony</p>
 
-                <p> It is impossible, yes!</p>
-                <p> but my super-warriors helped me - </p>
-                <p> my very entrusted defenders.</p>
-                <p> They are my source of strength </p>
-                <p> to get out from loneliness,</p>
-                <p> to get out from fear,</p>
-                <p> and to hone my passion.</p>
-                <p> Thank you for everything!</p>
-                <p> It was definitely proven.</p>
+                    <p> It is impossible, yes!</p>
+                    <p> but my super-warriors helped me —</p>
+                    <p> my very entrusted defenders.</p>
+                    <p> They are my source of strength </p>
+                    <p> to get out from loneliness,</p>
+                    <p> to get out from fear,</p>
+                    <p> and to hone my passion.</p>
+                    <p> Thank you for everything!</p>
+                    <p> It was definitely proven.</p>
+                </div>
             </div>
         </div>
     </div>
