--- a/templates/temp-1.html
+++ b/templates/temp-1.html
@@ -33,9 +33,9 @@
             <li><a href="temp-4.html"><span class="label">Warmth Feelings</span></a></li>
         </div>
         <div class="settings">
-            <li><a>links</a></li>
-            <li><a>dates</a></li>
-            <li><a>settings</a></li>
+            <li><a href="https://mail.google.com"><i class="fas fa-envelope"></i></a></li>
+            <li><a href="https://www.facebook.com/rowwnyy"><i class="fab fa-facebook"></i></a></li>
+            <li><a href="https://twitter.com/rowwwnnniiy"><i class="fab fa-twitter"></i></a></li>
         </div>
     </ul>
 </nav>
@@ -43,41 +43,46 @@
 <body>
     <div class="container-1">
         <div class="header">
-            <h1>Poetry World</h1>
+            <!-- <h1>Poetry World</h1> -->
+            <h1>Moment of Truth</h1>
+            <h3>(Free Verse Poem)</h3>
         </div>
         <div class="hero">
             <div class="component-1">
-                <h2>Moment of Truth</h2>
-                <h3>(Free Verse Poem)</h3>
-                <p>I am wondering at the corridor</p>
-                <p>Waiting for someone else to come</p>
-                <p>I sensed the environment is new</p>
-                <p>The place is as wide as a space</p>
-                <p>I think a lot of my chosen course</p>
-                <p>For it is newly to me</p>
-                <p>I am looking for someone to lean on</p>
-                <p>I am hesitant and yet downgraded</p>
-                <p>My chosen career is not my passion</p>
-                <p>It makes me weak!</p>
-                <p>I reached many hands for any help</p>
-                <p>But after the asperities</p>
-                <p>Those make me stronger;</p>
-                <p>I strive in every assessment -</p>
-                <p>Battling sleepless nights just to survive -</p>
-                <p>The pressure is on</p>
-                <p>Yes, I thought I carry the world.</p>
-                <p>A day has come to students</p>
-                <p>Bearing various reactions</p>
-                <p>To their bright and uniform grades</p>
-                <p>They deserved it, so as I</p>
-                <p>I never boast to receive those</p>
-                <p>It was not promising</p>
-                <p>But, I feel like I'm on cloud nine</p>
-                <p>'Cause I exerted efforts to achieve it</p>
-                <p>It was unexpected, absolutely!</p>
-                <p>This triumph was made easy for me</p>
-                <p>Since most people, some friends,</p>
-                <p>They have extended their hands to me.</p>
+                <div class="class-1">
+                    <p>I am wondering at the corridor</p>
+                    <p>Waiting for someone else to come</p>
+                    <p>I sensed the environment is new</p>
+                    <p>The place is as wide as a space</p>
+                    <p>I think a lot of my chosen course</p>
+                    <p>For it is newly to me</p>
+                    <p>I am looking for someone to lean on</p>
+                    <p>I am hesitant and yet downgraded</p>
+                    <p>My chosen career is not my passion</p>
+                    <p>It makes me weak!</p>
+                    <p>I reached many hands for any help</p>
+                    <p>But after the asperities</p>
+                    <p>Those make me stronger;</p>
+                    <p>I strive in every assessment —</p>
+                    <p>Battling sleepless nights just to survive —</p>
+
+                </div>
+                <div class="class-2">
+                    <p>The pressure is on</p>
+                    <p>Yes, I thought I carry the world.</p>
+                    <p>A day has come to students</p>
+                    <p>Bearing various reactions</p>
+                    <p>To their bright and uniform grades</p>
+                    <p>They deserved it, so as I</p>
+                    <p>I never boast to receive those</p>
+                    <p>It was not promising</p>
+                    <p>But, I feel like I'm on cloud nine</p>
+                    <p>'Cause I exerted efforts to achieve it</p>
+                    <p>It was unexpected, absolutely!</p>
+                    <p>This triumph was made easy for me</p>
+                    <p>Since most people, some friends,</p>
+                    <p>They have extended their hands to me.</p>
+                </div>
             </div>
         </div>
     </div>
