Creative Project Revision-5

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
     --light-pink: #eac4d5;
     --dark-pink: #94486a;
     --light-blue: #95b8d1;
+    --light-color: #fff;
     --font-main: 'Playfair Display', sans-serif;
     --font-secondary: 'Roboto', sans-serif;
 }
