--- a/about/style.css
+++ b/about/style.css
@@ -294,6 +294,10 @@ li.fade {
     font-size: 16px;
 }
 
+.settings li a:hover {
+    color: var(--dark-green);
+}
+
 @media screen and (min-width: 768px) {
     .hero {
         margin-top: 20px;
