--- a/templates/style.css
+++ b/templates/style.css
@@ -325,6 +325,10 @@ li.fade {
     font-size: 16px;
 }
 
+.settings li a:hover {
+    color: var(--dark-green);
+}
+
 @media screen and (min-width: 768px) {
     .hero {
         width: auto;
