--- a/style.css
+++ b/style.css
@@ -348,6 +348,11 @@ li.fade {
     text-decoration: none;
 }
 
+.dashboard li a,
+.pages li a {
+    color: #fff;
+}
+
 .dashboard li a:hover,
 .pages li a:hover {
     max-width: 100px;
